--- a/index.html
+++ b/index.html
@@ -3154,21 +3154,13 @@
           ></div>
           <div class="py-8">
             <p class="text-body-color text-center text-base dark:text-white">
-              Template by<!-- -->
+              Developed by<!-- -->
               <a
-                href="http://uideck.com"
+                href="https://ctrlshiftweb.github.io"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="hover:text-primary"
-                >UIdeck</a
-              >
-              <!-- -->and<!-- -->
-              <a
-                href="https://nextjstemplates.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="hover:text-primary"
-                >Next.js Templates</a
+                >ctrlShiftWeb Technologies</a
               >
             </p>
           </div>
