--- a/_not-found.html
+++ b/_not-found.html
@@ -45,7 +45,7 @@
                   data-nimg="1"
                   class="w-full dark:hidden"
                   style="color: transparent"
-                  src="images/logo/logo-2.svg" /><img
+                  src="images/logo/logo.png" /><img
                   alt="logo"
                   loading="lazy"
                   width="140"
@@ -54,7 +54,7 @@
                   data-nimg="1"
                   class="hidden w-full dark:block"
                   style="color: transparent"
-                  src="images/logo/logo.svg"
+                  src="images/logo/logo_1.png"
               /></a>
             </div>
             <div class="flex w-full items-center justify-between px-4">
@@ -76,7 +76,7 @@
                 </button>
                 <nav
                   id="navbarCollapse"
-                  class="navbar border-body-color/50 dark:border-body-color/20 dark:bg-dark invisible absolute top-[120%] right-0 z-30 w-[250px] rounded border-[.5px] bg-white px-6 py-4 opacity-0 duration-300 lg:visible lg:static lg:w-auto lg:border-none lg:!bg-transparent lg:p-0 lg:opacity-100"
+                  class="navbar border-body-color/50 dark:border-body-color/20 dark:bg-dark hidden invisible absolute top-[120%] right-0 z-30 w-[250px] rounded border-[.5px] bg-white px-6 py-4 opacity-0 duration-300 lg:visible lg:static lg:w-auto lg:border-none lg:!bg-transparent lg:p-0 lg:opacity-100"
                 >
                   <ul class="block lg:flex lg:items-center lg:space-x-12">
                     <li class="group relative">
@@ -296,7 +296,7 @@
                     data-nimg="1"
                     class="w-full dark:hidden"
                     style="color: transparent"
-                    src="images/logo/logo-2.svg" /><img
+                    src="images/logo/logo.png" /><img
                     alt="logo"
                     loading="lazy"
                     width="140"
@@ -305,7 +305,7 @@
                     data-nimg="1"
                     class="hidden w-full dark:block"
                     style="color: transparent"
-                    src="images/logo/logo.svg"
+                    src="images/logo/logo_1.png"
                 /></a>
                 <p
                   class="text-body-color dark:text-body-color-dark mb-9 text-base leading-relaxed"
