--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="next-size-adjust" content="" />
-  <title>Investment Company | Grow Your Wealth With Confidence</title>
+  <title>Naveen Groups | Grow Your Wealth With Confidence</title>
   <meta name="description"
     content="Professional investment management and wealth growth strategies. Partner with us for tailored portfolios and long-term financial success." />
   <link rel="stylesheet" href="css/style.css" />
