--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="next-size-adjust" content="" />
-  <title>Blog Page | Free Next.js Template for Startup and SaaS</title>
+  <title>Blog Page | Naveen Groups</title>
   <meta name="description" content="This is Blog Page for Startup Nextjs Template" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
