--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 We help you invest in the right mutual funds based on your goals, risk profile, and time horizon. Our
                 focus is long-term wealth creation with transparency and trust.
               </p>
-              <div class="bg-yellow-50 dark:bg-yellow-900/20 border-l-4 border-yellow-500 p-4 mb-12 rounded">
-                <p class="text-sm sm:text-base text-yellow-800 dark:text-yellow-200 font-medium">
+              <div class="bg-[#F3F4F8] dark:bg-[#1a1f2e] border-l-4 border-[#4a6cf7] p-4 mb-12 rounded">
+                <p class="text-body-color dark:text-body-color-dark text-sm sm:text-base leading-relaxed! font-medium">
                   👉 Mutual Fund investments are subject to market risks. Read all scheme related documents carefully.
                 </p>
               </div>
@@ -1345,13 +1345,13 @@
       </div>
     </section>
     <!-- Important Disclaimer Section -->
-    <section class="bg-red-50 dark:bg-red-900/20 border-t-4 border-red-600 py-12 md:py-16">
+    <section class="bg-[#F3F4F8] dark:bg-[#1a1f2e] border-t-4 border-[#4a6cf7] py-12 md:py-16">
       <div class="container">
         <div class="mx-auto max-w-[900px]">
-          <h2 class="mb-6 text-2xl font-bold text-red-700 dark:text-red-200 text-center sm:text-3xl">
+          <h2 class="mb-6 text-2xl font-bold text-black dark:text-white text-center sm:text-3xl">
             ⚠️ IMPORTANT DISCLAIMER
           </h2>
-          <div class="space-y-4 text-base text-red-800 dark:text-red-100">
+          <div class="space-y-4 text-base text-body-color dark:text-body-color-dark">
             <p class="font-semibold text-center text-lg">
               Mutual Fund investments are subject to market risks, read all scheme related documents carefully.
             </p>
@@ -1359,8 +1359,8 @@
               Past performance is not indicative of future returns. We are AMFI registered Mutual Fund Distributors. We
               do not guarantee any returns.
             </p>
-            <div class="bg-white dark:bg-gray-800 rounded-md p-6 mt-6 border border-red-200 dark:border-red-800">
-              <p class="text-gray-700 dark:text-body-color-dark text-sm text-center">
+            <div class="bg-[#F3F4F8] dark:bg-[#1a1f2e] rounded-md p-6 mt-6 border border-[#E5E7EB] dark:border-[#2a3139]">
+              <p class="text-black dark:text-white text-sm text-center">
                 <strong>Disclaimer:</strong> The information provided on this website is for general informational
                 purposes only and should not be considered as financial advice. Please consult with a qualified
                 financial advisor before making any investment decisions. Investments in mutual funds are subject to
