--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
       } catch (t) { }
     })();
   </script>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+
+    if (params.get("success") === "true") {
+      alert("Thank you for contacting Naveen Groups. Your support ticket has been submitted successfully. Our team will reach out to you shortly.");
+      window.history.replaceState({}, document.title, window.location.pathname);
+    }
+  </script>
+
   <div class="isolate">
     <header class="header absolute top-0 left-0 z-40 flex w-full items-center bg-transparent">
       <div class="container">
@@ -1210,37 +1219,56 @@
               <p class="text-body-color dark:text-body-color-dark mb-12 text-base font-medium">
                 Our support team will get back to you ASAP via email.
               </p>
-              <form>
+              <form action="https://formspree.io/f/xpqjalzp" method="POST">
+                <input type="hidden" name="_redirect" value="https://naveengroups.in/index.html?success=true" />
+
+
                 <div class="-mx-4 flex flex-wrap">
+
+                  <!-- Name -->
                   <div class="w-full px-4 md:w-1/2">
                     <div class="mb-8">
-                      <label for="name" class="text-dark mb-3 block text-sm font-medium dark:text-white">Your
-                        Name</label><input type="text" placeholder="Enter your name"
+                      <label class="text-dark mb-3 block text-sm font-medium dark:text-white">
+                        Your Name
+                      </label>
+                      <input type="text" name="name" placeholder="Enter your name" required
                         class="border-stroke text-body-color focus:border-primary dark:text-body-color-dark dark:shadow-two dark:focus:border-primary w-full rounded-xs border bg-[#f8f8f8] px-6 py-3 text-base outline-hidden dark:border-transparent dark:bg-[#2C303B] dark:focus:shadow-none" />
                     </div>
                   </div>
+
+                  <!-- Email -->
                   <div class="w-full px-4 md:w-1/2">
                     <div class="mb-8">
-                      <label for="email" class="text-dark mb-3 block text-sm font-medium dark:text-white">Your
-                        Email</label><input type="email" placeholder="Enter your email"
+                      <label class="text-dark mb-3 block text-sm font-medium dark:text-white">
+                        Your Email
+                      </label>
+                      <input type="email" name="email" placeholder="Enter your email" required
                         class="border-stroke text-body-color focus:border-primary dark:text-body-color-dark dark:shadow-two dark:focus:border-primary w-full rounded-xs border bg-[#f8f8f8] px-6 py-3 text-base outline-hidden dark:border-transparent dark:bg-[#2C303B] dark:focus:shadow-none" />
                     </div>
                   </div>
+
+                  <!-- Message -->
                   <div class="w-full px-4">
                     <div class="mb-8">
-                      <label for="message" class="text-dark mb-3 block text-sm font-medium dark:text-white">Your
-                        Message</label><textarea name="message" rows="5" placeholder="Enter your Message"
+                      <label class="text-dark mb-3 block text-sm font-medium dark:text-white">
+                        Your Message
+                      </label>
+                      <textarea name="message" rows="5" placeholder="Enter your Message" required
                         class="border-stroke text-body-color focus:border-primary dark:text-body-color-dark dark:shadow-two dark:focus:border-primary w-full resize-none rounded-xs border bg-[#f8f8f8] px-6 py-3 text-base outline-hidden dark:border-transparent dark:bg-[#2C303B] dark:focus:shadow-none"></textarea>
                     </div>
                   </div>
+
+                  <!-- Submit -->
                   <div class="w-full px-4">
-                    <button
+                    <button type="submit"
                       class="bg-primary shadow-submit hover:bg-primary/90 dark:shadow-submit-dark rounded-xs px-9 py-4 text-base font-medium text-white duration-300">
                       Submit Ticket
                     </button>
                   </div>
+
                 </div>
               </form>
+
             </div>
           </div>
           <div class="w-full px-4 lg:w-5/12 xl:w-4/12">
@@ -1359,7 +1387,8 @@
               Past performance is not indicative of future returns. We are AMFI registered Mutual Fund Distributors. We
               do not guarantee any returns.
             </p>
-            <div class="bg-[#F3F4F8] dark:bg-[#1a1f2e] rounded-md p-6 mt-6 border border-[#E5E7EB] dark:border-[#2a3139]">
+            <div
+              class="bg-[#F3F4F8] dark:bg-[#1a1f2e] rounded-md p-6 mt-6 border border-[#E5E7EB] dark:border-[#2a3139]">
               <p class="text-black dark:text-white text-sm text-center">
                 <strong>Disclaimer:</strong> The information provided on this website is for general informational
                 purposes only and should not be considered as financial advice. Please consult with a qualified
