--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
                 Our support team will get back to you ASAP via email.
               </p>
               <form action="https://formspree.io/f/xpqjalzp" method="POST">
-                <input type="hidden" name="_redirect" value="https://naveengroups.in/index.html?success=true" />
+                <input type="hidden" name="_redirect" value="https://naveengroups.in/?success=true" />
 
 
                 <div class="-mx-4 flex flex-wrap">
