Change form action to Web3Forms API

--- a/index.html
+++ b/index.html
@@ -1219,8 +1219,8 @@
               <p class="text-body-color dark:text-body-color-dark mb-12 text-base font-medium">
                 Our support team will get back to you ASAP via email.
               </p>
-              <form action="https://formspree.io/f/xpqjalzp" method="POST">
-                <input type="hidden" name="_redirect" value="https://naveengroups.in/?success=true" />
+              <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="b460af38-1d46-4bf1-95eb-fc2775ca73ab">
 
 
                 <div class="-mx-4 flex flex-wrap">
