--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
               </p>
               <form action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="b460af38-1d46-4bf1-95eb-fc2775ca73ab">
-                <input type="hidden" name="redirect" value="https://naveengroups.in/">
+                <input type="hidden" name="redirect" value="https://naveengroups.in/?success=true">
 
 
                 <div class="-mx-4 flex flex-wrap">
